--- a/Juego/CandyMind/index.html
+++ b/Juego/CandyMind/index.html
@@ -3,28 +3,27 @@
     <head>
         <meta charset="utf-8" />
         <title>Menú Principal</title>
-        <link href="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/css/styleindex.css" rel="stylesheet" />
+        <link href="css/styleindex.css" rel="stylesheet" />
 
     </head>
-
     <body>
         <div id="fondo">
 
-            <img alt="full screen background image" src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Menu/Fondo_menu.gif" />
+            <img alt="full screen background image" src="Recursos/Menu/Fondo_menu.gif" />
 
             <div class="horizontal divcentrar sobre">
 
                 <div class="vertical sobre">
-                    <a href="file:///Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/juego.html">
-                        <img src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Menu/Empezar_boton.png" width="400" height="250" />
+                    <a href="juego.html">
+                        <img src="Recursos/Menu/Empezar_boton.png" width="400" height="250" />
                     </a>
                     <br />
-                    <a href="file:///Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/instrucciones.html">
-                        <img src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Menu/Instrucciones_boton.png" width="350" height="150" />
+                    <a href="instrucciones.html">
+                        <img src="Recursos/Menu/Instrucciones_boton.png" width="350" height="150" />
                     </a>
                     <br />
-                    <a href="file:///Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/creditos.html">
-                        <img src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Menu/Creditos_boton.png" width="250" height="150" />
+                    <a href="creditos.html">
+                        <img src="Recursos/Menu/Creditos_boton.png" width="250" height="150" />
                     </a>
                 </div>
 
