Cambios a la vista de index, redimensionamiento de los botones y el fondo.

--- a/Juego/CandyMind/index.html
+++ b/Juego/CandyMind/index.html
@@ -8,23 +8,26 @@
     </head>
     <body>
         <div id="fondo">
+             <!-- Fondo -->
 
-            <img alt="full screen background image" src="Recursos/Menu/Fondo_menu.gif" />
-
-            <div class="horizontal divcentrar sobre">
+            <div class="horizontal sobre">
 
                 <div class="vertical sobre">
+                  <div class="btn">
                     <a href="juego.html">
-                        <img src="Recursos/Menu/Empezar_boton.png" width="400" height="250" />
+                      <img src="Recursos/Menu/Empezar_boton.png" width="400" height="250" />
                     </a>
-                    <br />
+                  </div>
+                  <div class="btn">
                     <a href="instrucciones.html">
-                        <img src="Recursos/Menu/Instrucciones_boton.png" width="350" height="150" />
+                      <img src="Recursos/Menu/Instrucciones_boton.png" width="350" height="150" />
                     </a>
-                    <br />
+                  </div>
+                  <div class="btn">
                     <a href="creditos.html">
-                        <img src="Recursos/Menu/Creditos_boton.png" width="250" height="150" />
+                      <img src="Recursos/Menu/Creditos_boton.png" width="250" height="150" />
                     </a>
+                  </div>
                 </div>
 
             </div>
