--- a/Juego/CandyMind/instrucciones.html
+++ b/Juego/CandyMind/instrucciones.html
@@ -1,28 +1,28 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Instrucciones</title>
-        <link href="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/css/stylecreditos_instrucciones.css" rel="stylesheet" />
+<head>
+  <meta charset="utf-8" />
+  <title>Instrucciones</title>
+  <link href="css/stylecreditos_instrucciones.css" rel="stylesheet" />
 
-    </head>
+</head>
 
-    <body>
-        <div id="fondo">
-            
-            <img alt="full screen background image" src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Pantalla instrucciones/Instrucciones.gif" />
+<body>
+  <div id="fondo">
 
-            <div class="horizontal divcentrar sobre">
+    <img alt="full screen background image" src="Recursos/PantallaInstrucciones/Instrucciones.gif" />
 
-                 <div class="vertical sobre">
-                    <a href="file:///Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/index.html">
-                        
-                        <img src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Pantalla instrucciones/Boton_Salir.png" width="250" height="250" />
-                    </a>
-                </div>
+    <div class="horizontal divcentrar sobre">
 
-            </div>
+      <div class="vertical sobre">
+        <a href="index.html">
 
-        </div>
-    </body>
+          <img src="Recursos/PantallaInstrucciones/Boton_Salir.png" width="250" height="250" />
+        </a>
+      </div>
+
+    </div>
+
+  </div>
+</body>
 </html>
