--- a/Juego/CandyMind/juego.html
+++ b/Juego/CandyMind/juego.html
@@ -7,28 +7,28 @@
 
         <title>Juego</title>
 
-        <link href="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/css/stylejuego.css" rel="stylesheet" />
+        <link href="css/stylejuego.css" rel="stylesheet" />
 
-        <script src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/javascript/main.js"></script>
-        <script src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/javascript/Environment.js"></script>
-        <script src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/javascript/Bird.js"></script>
-        <script src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/javascript/Pipe.js"></script>
+        <script src="javascript/main.js"></script>
+        <script src="javascript/Environment.js"></script>
+        <script src="javascript/Bird.js"></script>
+        <script src="javascript/Pipe.js"></script>
     </head>
 
         <body>
             <div id="fondo">
 
-                <img alt="full screen background image" src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Pantalla de juego/Fondo_para_Repetir.jpg" />
+                <img alt="full screen background image" src="Recursos/PantallaJuego/Fondo_para_Repetir.jpg" />
 
                 <div class="horizontal divcentrar sobre">
 
                     <div class="vertical sobre">
-                        <a href="file:///Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/index.html">
-                            <img src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Pantalla de juego/Boton_salir.png" width="150" height="150" />
+                        <a href="index.html">
+                            <img src="Recursos/PantallaJuego/Boton_salir.png" width="150" height="150" />
                         </a>
 
                         <canvas id='canvas'></canvas>
-                        <img src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Pantalla de juego/Alien.gif" id="bird1" width="150" height="150"/>
+                        <img src="Recursos/PantallaJuego/Alien.gif" id="bird1" width="150" height="150"/>
 
                     </div>
 
