--- a/Juego/CandyMind/loading.html
+++ b/Juego/CandyMind/loading.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8" />
 
-        <meta http-equiv="refresh" content="5; url=file:///Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/index.html" />
+        <meta http-equiv="refresh" content="5; url=index.html" />
 
         <title>LoadingPage</title>
-        <link href="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/css/styleloading.css" rel="stylesheet" />
+        <link href="css/styleloading.css" rel="stylesheet" />
     </head>
     <body>
 
-        <img id="gif" alt="full screen background image" src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Cargando.gif"/>
+        <img id="gif" alt="full screen background image" src="Recursos/Cargando.gif"/>
 
     </body>
 </html>
