--- a/Juego/CandyMind/creditos.html
+++ b/Juego/CandyMind/creditos.html
@@ -1,28 +1,27 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Creditos</title>
-        <link href="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/css/stylecreditos_instrucciones.css" 
-                rel="stylesheet" />
-    
-    </head>
+<head>
+  <meta charset="utf-8" />
+  <title>Creditos</title>
+  <link href="css/stylecreditos_instrucciones.css" rel="stylesheet" />
 
-    <body>
-        <div id="fondo">
+</head>
 
-            <img alt="full screen background image" src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Pantalla Creditos/Creditos_fondo.gif"/>
+<body>
+  <div id="fondo">
 
-            <div class="horizontal divcentrar sobre">
+    <img alt="full screen background image" src="Recursos/PantallaCreditos/Creditos_fondo.gif"/>
 
-                <div class="vertical sobre">
-                    <a href="file:///Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/index.html">
-                        <img src="/Users/valeriamorenozapata/Documents/GitHub/JuegoCandyMind/CandyMind/CandyMind/Recursos/Pantalla Creditos/Boton_Salir_Creditos.png" width="250" height="250" />
-                    </a>
-                </div>
+    <div class="horizontal divcentrar sobre">
 
-            </div>
+      <div class="vertical sobre">
+        <a href="index.html">
+          <img src="Recursos/PantallaCreditos/Boton_Salir_Creditos.png" width="250" height="250" />
+        </a>
+      </div>
 
-        </div>
-    </body>
+    </div>
+
+  </div>
+</body>
 </html>
