Implementación del juego y de las nuevas imagenes

--- a/Juego/CandyMind/juego.html
+++ b/Juego/CandyMind/juego.html
@@ -9,16 +9,10 @@
 
         <link href="css/stylejuego.css" rel="stylesheet" />
 
-        <script src="javascript/main.js"></script>
-        <script src="javascript/Environment.js"></script>
-        <script src="javascript/Bird.js"></script>
-        <script src="javascript/Pipe.js"></script>
     </head>
 
         <body>
             <div id="fondo">
-
-                <img alt="full screen background image" src="Recursos/PantallaJuego/Fondo_para_Repetir.jpg" />
 
                 <div class="horizontal divcentrar sobre">
 
@@ -27,8 +21,7 @@
                             <img src="Recursos/PantallaJuego/Boton_salir.png" width="150" height="150" />
                         </a>
 
-                        <canvas id='canvas'></canvas>
-                        <img src="Recursos/PantallaJuego/Alien.gif" id="bird1" width="150" height="150"/>
+                        <canvas id="canvas" width="288" height="512"></canvas>
 
                     </div>
 
@@ -36,7 +29,7 @@
 
             </div>
 
-
+            <script src="javascript/flappyBird.js"></script>
 
 
         </body>
