--- a/Juego/CandyMind/juego.html
+++ b/Juego/CandyMind/juego.html
@@ -1,37 +1,37 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-        <title>Juego</title>
+  <title>Juego</title>
 
-        <link href="css/stylejuego.css" rel="stylesheet" />
+  <link href="css/stylejuego.css" rel="stylesheet" />
 
-    </head>
+</head>
 
-        <body>
-            <div id="fondo">
+<body>
+  <div id="fondo">
 
-                <div class="horizontal divcentrar sobre">
+    <div class="horizontal divcentrar sobre">
 
-                    <div class="vertical sobre">
-                      <a href="index.html" style="float:left">
-                          <img src="Recursos/PantallaJuego/Boton_salir.png" width="150" height="150" />
-                      </a>
-                        <canvas id="canvas" width="288" height="512">
+      <div class="vertical sobre">
+        <a href="index.html" style="float:left">
+          <img src="Recursos/PantallaJuego/Boton_salir.png" width="150" height="150" />
+        </a>
+        <canvas id="canvas" width="288" height="512">
 
-                        </canvas>
+        </canvas>
 
-                    </div>
+      </div>
 
-                </div>
+    </div>
 
-            </div>
+  </div>
 
-            <script src="javascript/flappyBird.js"></script>
+  <script src="javascript/flappyBird.js"></script>
 
 
-        </body>
+</body>
 </html>
