--- a/Juego/CandyMind/index.html
+++ b/Juego/CandyMind/index.html
@@ -1,41 +1,41 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Menú Principal</title>
-        <link href="css/styleindex.css" rel="stylesheet" />
+<head>
+  <meta charset="utf-8" />
+  <title>Menú Principal</title>
+  <link href="css/styleindex.css" rel="stylesheet" />
 
-    </head>
-    <body>
-        <div id="fondo">
-             <!-- Fondo -->
+</head>
+<body>
+  <div id="fondo">
+    <!-- Fondo -->
 
-            <div class="horizontal sobre">
+    <div class="horizontal sobre">
 
-                <div class="vertical sobre">
-                  <div class="btn">
-                    <a href="juego.html">
-                      <img src="Recursos/Menu/Empezar_boton.png" width="400" height="250" />
-                    </a>
-                  </div>
-                  <div class="btn">
-                    <a href="instrucciones.html">
-                      <img src="Recursos/Menu/Instrucciones_boton.png" width="350" height="150" />
-                    </a>
-                  </div>
-                  <div class= "vertical2 sobre2">
-                      <div class="btn">
-                    <a href="creditos.html">
-                      <img src="Recursos/Menu/Creditos_boton.png" width="200" height="150" />
-                    </a>
-                  </div>
-                  </div> 
-                  
-                </div>
-
-            </div>
-
+      <div class="vertical sobre">
+        <div class="btn">
+          <a href="juego.html">
+            <img src="Recursos/Menu/Empezar_boton.png" width="400" height="250" />
+          </a>
+        </div>
+        <div class="btn">
+          <a href="instrucciones.html">
+            <img src="Recursos/Menu/Instrucciones_boton.png" width="350" height="150" />
+          </a>
+        </div>
+        <div class= "vertical2 sobre2">
+          <div class="btn">
+            <a href="creditos.html">
+              <img src="Recursos/Menu/Creditos_boton.png" width="200" height="150" />
+            </a>
+          </div>
         </div>
 
-    </body>
+      </div>
+
+    </div>
+
+  </div>
+
+</body>
 </html>
