--- a/Juego/CandyMind/juego.html
+++ b/Juego/CandyMind/juego.html
@@ -17,7 +17,7 @@
     <div class="horizontal divcentrar sobre">
 
       <div class="vertical sobre">
-        <a href="index.html" style="float:left">
+        <a href="index.html">
           <img src="Recursos/PantallaJuego/Boton_salir.png" width="150" height="150" />
         </a>
         <canvas id="canvas" width="288" height="512">
